DEVOPS: compiled with Java 1.8 Compability Level to support former JRE BUGFIX: spawning a telnet serversocket blocked the creation of the servlet